Changes: - Added webkits to fix transition bugs on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -110,10 +110,13 @@
     display: flex;
     flex-direction: column;
     background-color: rgba(24, 24, 32, 0.7);
-    transition: width 1s, height 1s, margin 1s, background-color 1s;
     text-decoration: none;
     overflow: hidden;
     padding: 5px;
+    -webkit-transition: width 1s, height 1s, margin 1s, background-color 1s;
+    -moz-transition: width 1s, height 1s, margin 1s, background-color 1s;
+    -o-transition: width 1s, height 1s, margin 1s, background-color 1s;
+    transition: width 1s, height 1s, margin 1s, background-color 1s;
 }
 
 .projectText:hover {
@@ -134,6 +137,9 @@
     font-weight: bolder;
     font-size: larger;  
     width:initial;
+    -webkit-transition: margin 1s;
+    -moz-transition: margin 1s;
+    -o-transition: margin 1s;
     transition: margin 1s;
 }
 
